@@ -2,11 +2,13 @@ package com.deliverytech.delivery_api.services;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
-
-import com.deliverytech.delivery_api.repository.PedidoRepository;
-import com.deliverytech.delivery_api.repository.ProdutoRepository;
+import com.deliverytech.delivery_api.dto.RestauranteRequestDTO;
+import com.deliverytech.delivery_api.dto.RestauranteResponseDTO;
+import com.deliverytech.delivery_api.exceptions.BusinessException;
+import com.deliverytech.delivery_api.exceptions.EntityNotFoundException;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -14,151 +16,108 @@ import org.springframework.transaction.annotation.Transactional;
 import com.deliverytech.delivery_api.entity.Restaurante;
 import com.deliverytech.delivery_api.repository.RestauranteRepository;
 
-import com.deliverytech.delivery_api.entity.RestauranteDTO;
-
 @Service
+@Transactional
 public class RestauranteService {
 
     @Autowired
     private RestauranteRepository restauranteRepository;
 
     @Autowired
-    private ProdutoRepository produtoRepository;
-
-    @Autowired
-    private PedidoRepository pedidoRepository;
+    private ModelMapper modelMapper;
 
     /**
-     * Cadastrar novo restaurante
+     * 1.2: Cadastrar Restaurante
      */
-    public Restaurante cadastrar(Restaurante restaurante) {
-        // Validar nome único
-        if (restauranteRepository.findByNome(restaurante.getNome()).isPresent()) {
-            throw new IllegalArgumentException("Restaurante já cadastrado: " + restaurante.getNome());
+    public RestauranteResponseDTO cadastrarRestaurante(RestauranteRequestDTO dto) {
+        if (restauranteRepository.findByNome(dto.getNome()).isPresent()) {
+            throw new BusinessException("Restaurante já cadastrado: " + dto.getNome());
         }
 
-        validarDadosRestaurante(restaurante);
+        Restaurante restaurante = modelMapper.map(dto, Restaurante.class);
         restaurante.setAtivo(true);
+        // Você pode definir uma avaliação padrão se quiser
+        restaurante.setAvaliacao(BigDecimal.ZERO);
 
-        return restauranteRepository.save(restaurante);
+        Restaurante restauranteSalvo = restauranteRepository.save(restaurante);
+
+        return modelMapper.map(restauranteSalvo, RestauranteResponseDTO.class);
     }
 
     /**
-     * Buscar por ID
+     * 1.2: Buscar Restaurante por ID
      */
     @Transactional(readOnly = true)
-    public Optional<Restaurante> buscarPorId(Long id) {
-        return restauranteRepository.findById(id);
+    public RestauranteResponseDTO buscarRestaurantePorId(Long id) {
+        Restaurante restaurante = restauranteRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Restaurante não encontrado com ID: " + id));
+
+        return modelMapper.map(restaurante, RestauranteResponseDTO.class);
     }
 
-    @Transactional(readOnly = true)
-    public Optional<RestauranteDTO> findById(Long id) {
-        Optional<Restaurante> byId = restauranteRepository.findById(id);
-        if (byId.isEmpty()) {
-            return Optional.empty();
-        }
-        return byId.map(restaurante -> new RestauranteDTO(
-                restaurante.getId(),
-                restaurante.getNome(),
-                restaurante.getCategoria(),
-                restaurante.getEndereco(),
-                restaurante.getTelefone(),
-                restaurante.getTaxaEntrega(),
-                restaurante.getAvaliacao(),
-                restaurante.getAtivo()));
-    }
     /**
-     * Listar restaurantes ativos
+     * 1.2: Buscar Restaurantes Disponíveis (Apenas Ativos)
      */
     @Transactional(readOnly = true)
-    public List<RestauranteDTO> listarAtivos() {
-        List<Restaurante> byAtivoTrue = restauranteRepository.findByAtivoTrue();
-        if (byAtivoTrue.isEmpty()) {
-            throw new IllegalArgumentException("Nenhum restaurante ativo encontrado");
-        }
-        return byAtivoTrue.stream()
-            .map(restaurante -> new RestauranteDTO(
-                restaurante.getId(),
-                restaurante.getNome(),
-                restaurante.getCategoria(),
-                restaurante.getEndereco(),
-                restaurante.getTelefone(),
-                restaurante.getTaxaEntrega(),
-                restaurante.getAvaliacao(),
-                restaurante.getAtivo()))
-            .toList();
+    public List<RestauranteResponseDTO> buscarRestaurantesDisponiveis() {
+        List<Restaurante> restaurantes = restauranteRepository.findByAtivoTrue();
+
+        return restaurantes.stream()
+                .map(restaurante -> modelMapper.map(restaurante, RestauranteResponseDTO.class))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Buscar por categoria
+     * 1.2: Buscar Restaurantes por Categoria
      */
     @Transactional(readOnly = true)
-    public List<RestauranteDTO> buscarPorCategoria(String categoria) {
-        List<Restaurante> byCategoria = restauranteRepository.findByCategoria(categoria);
-        if (byCategoria.isEmpty()) {
-            throw new IllegalArgumentException("Nenhum restaurante encontrado para a categoria: " + categoria);
-        }
+    public List<RestauranteResponseDTO> buscarRestaurantesPorCategoria(String categoria) {
+        List<Restaurante> restaurantes = restauranteRepository.findByCategoria(categoria);
 
-        return byCategoria.stream()
-            .map(restaurante -> new RestauranteDTO(
-                restaurante.getId(),
-                restaurante.getNome(),
-                restaurante.getCategoria(),
-                restaurante.getEndereco(),
-                restaurante.getTelefone(),
-                restaurante.getTaxaEntrega(),
-                restaurante.getAvaliacao(),
-                restaurante.getAtivo()))
-            .toList();
+        return restaurantes.stream()
+                .map(restaurante -> modelMapper.map(restaurante, RestauranteResponseDTO.class))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Atualizar restaurante
+     * 1.2: Atualizar Restaurante
      */
-    public Restaurante atualizar(Long id, Restaurante restauranteAtualizado) {
-        Restaurante restaurante = buscarPorId(id)
-            .orElseThrow(() -> new IllegalArgumentException("Restaurante não encontrado: " + id));
+    public RestauranteResponseDTO atualizarRestaurante(Long id, RestauranteRequestDTO dto) {
+        Restaurante restaurante = restauranteRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Restaurante não encontrado com ID: " + id));
 
-        // Verificar nome único (se mudou)
-        if (!restaurante.getNome().equals(restauranteAtualizado.getNome()) &&
-            restauranteRepository.findByNome(restauranteAtualizado.getNome()).isPresent()) {
-            throw new IllegalArgumentException("Nome já cadastrado: " + restauranteAtualizado.getNome());
+        // Validar nome único (se mudou)
+        if (!restaurante.getNome().equals(dto.getNome()) &&
+                restauranteRepository.findByNome(dto.getNome()).isPresent()) {
+            throw new BusinessException("Nome já cadastrado: " + dto.getNome());
         }
 
-        restaurante.setNome(restauranteAtualizado.getNome());
-        restaurante.setCategoria(restauranteAtualizado.getCategoria());
-        restaurante.setEndereco(restauranteAtualizado.getEndereco());
-        restaurante.setTelefone(restauranteAtualizado.getTelefone());
-        restaurante.setTaxaEntrega(restauranteAtualizado.getTaxaEntrega());
+        modelMapper.map(dto, restaurante);
 
-        return restauranteRepository.save(restaurante);
+        Restaurante restauranteAtualizado = restauranteRepository.save(restaurante);
+
+        return modelMapper.map(restauranteAtualizado, RestauranteResponseDTO.class);
     }
 
     /**
-     * Inativar restaurante
+     * 1.2: Calcular Taxa de Entrega (Lógica de entrega)
+     * (Implementação de exemplo)
      */
-    public void inativar(Long id) {
-        Restaurante restaurante = buscarPorId(id)
-            .orElseThrow(() -> new IllegalArgumentException("Restaurante não encontrado: " + id));
+    @Transactional(readOnly = true)
+    public BigDecimal calcularTaxaEntrega(Long restauranteId, String cep) {
+        Restaurante restaurante = restauranteRepository.findById(restauranteId)
+                .orElseThrow(() -> new EntityNotFoundException("Restaurante não encontrado com ID: " + restauranteId));
 
-        restaurante.setAtivo(false);
-        restauranteRepository.save(restaurante);
-    }
-
-    private void validarDadosRestaurante(Restaurante restaurante) {
-        if (restaurante.getNome() == null || restaurante.getNome().trim().isEmpty()) {
-            throw new IllegalArgumentException("Nome é obrigatório");
-        }
-
-        if (restaurante.getTaxaEntrega() != null &&
-            restaurante.getTaxaEntrega().compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException("Taxa de entrega não pode ser negativa");
+        // Lógica de placeholder:
+        // Se o CEP termina com "0", a taxa é a padrão.
+        // Senão, é a taxa padrão + R$ 2.00
+        if (cep != null && cep.endsWith("0")) {
+            return restaurante.getTaxaEntrega();
+        } else {
+            return restaurante.getTaxaEntrega().add(new BigDecimal("2.00"));
         }
     }
 
-    public void deletar(Long id) {
-        Restaurante restaurante = buscarPorId(id)
-            .orElseThrow(() -> new IllegalArgumentException("Restaurante não encontrado: " + id));
-        restauranteRepository.delete(restaurante);
-    }
+    // Você tinha métodos extras (inativar, deletar) que não estão no
+    // roteiro 4, mas podem ser mantidos se você quiser.
 }
